[package]
name = "odrive-rs"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"
description = "A library for controlling the ODrive motor controllers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Noah-Kennedy/odrive-rs/"
keywords = ["odrive", "motor", "brushless", "motor controller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serialport = "3.3.0"

[[example]]
name = "odrive_usb_test"

[[example]]
name = "odrive_terminal"