[package]
name = "odrive-rs"
version = "1.1.0"
authors = ["Noah Kennedy <nomaxx117@gmail.com>"]
edition = "2018"
description = "A library for controlling the ODrive motor controllers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Noah-Kennedy/odrive-rs/"
keywords = ["odrive", "motor", "brushless"]
readme = "README.md"
documentation = "https://docs.rs/odrive-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3"